# emvault-xpub

./: Cargo.toml  README.md  REGTEST.md
examples/: check_mnemonics.rs  print_descriptor_key.rs
src/: error.rs  lib.rs  parsing.rs  signer.rs
src/test_utils/: mnemonics.rs  mod.rs  signer.rs
tests/: external_signer_basic.rs  federation_address.rs  regtest_node_setup.rs  regtest_spend.rs  round_trip_signing.rs  test_signer_unit.rs
tests/common/: mod.rs  rpc.rs  sync.rs
